# grasp-anything

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-04-open-vocabulary-grasping-design.md  2026-07-13-grasp-anything-design.md
grasp_anything/: config.py  pipeline.py  types.py
grasp_anything/stages/: base.py
scripts/: manual_test.py
tests/: test_config.py  test_pipeline.py  test_types.py
tests/stages/: __init__.py  test_base.py
